modified the title in the head and body

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jim Cooper - TN</title>
+    <title>Jim Cooper</title>
 </head>
 <body>
     <article id="main">
 
         <section class="info">
-            <h1>Jim Cooper</h1>
+            <h1>Jim Cooper!</h1>
             <img src="http://fox17.com/resources/media/44769f49-5d91-462d-b664-42a773437242-large16x9_jimcooper.jpg?1596763724304" alt="Jim Cooper">      
         </section>
 
